/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.apache.raft.proto";
option java_outer_classname = "RaftServerProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package raft.hadoop;

import "Raft.proto";

message RaftServerRequestProto {
  raft.common.RaftRpcRequestProto rpcRequest = 1;
}

message RaftServerReplyProto {
  raft.common.RaftRpcReplyProto rpcReply = 1;
  uint64 term = 2;
}

message RequestVoteRequestProto {
  RaftServerRequestProto serverRequest = 1;
  uint64 candidateTerm = 2;
  raft.common.TermIndexProto candidateLastEntry = 3;
}

message RequestVoteReplyProto {
  RaftServerReplyProto serverReply = 1;
  bool shouldShutdown = 2;
}

message AppendEntriesRequestProto {
  RaftServerRequestProto serverRequest = 1;
  uint64 leaderTerm = 2;
  raft.common.TermIndexProto previousLog = 3;
  repeated raft.common.LogEntryProto entries = 4;
  uint64 leaderCommit = 5;
  bool initializing = 6;
}

message AppendEntriesReplyProto {
  enum AppendResult {
    SUCCESS = 0;
    NOT_LEADER = 1;
    INCONSISTENCY = 2;
  }

  RaftServerReplyProto serverReply = 1;
  uint64 nextIndex = 2;
  AppendResult result = 3;
}

message InstallSnapshotRequestProto {
  RaftServerRequestProto serverRequest = 1;
  string requestId = 2; // an identifier for chunked-requests.
  uint32 requestIndex = 3; // the index for this request chunk. Starts from 0.
  raft.common.RaftConfigurationProto raftConfiguration = 4;
  uint64 leaderTerm = 5;
  raft.common.TermIndexProto termIndex = 6;
  repeated raft.common.FileChunkProto fileChunks = 7;
  uint64 totalSize = 8;
  bool done = 9; // whether this is the final chunk for the same req.
}

message InstallSnapshotReplyProto {
  RaftServerReplyProto serverReply = 1;
  raft.common.InstallSnapshotResult result = 2;
}

service RaftServerProtocolService {
  rpc requestVote(RequestVoteRequestProto)
      returns(RequestVoteReplyProto);

  rpc appendEntries(AppendEntriesRequestProto)
      returns(AppendEntriesReplyProto);

  rpc installSnapshot(InstallSnapshotRequestProto)
      returns(InstallSnapshotReplyProto);
}
